syntax = "proto3";

option go_package = "github.com/omecodes/omestore/pb/pb.proto;pb";

enum AllowedTo {
  doNothing = 0;
  create = 1;
  read = 2;
  write = 4;
  delete = 8;
  editAcl = 16;
  graft = 32;
  doAnything = 63;
}

message RelationDef {
  string name = 1;
  bool equivalence = 2;
}


message AccessRules {
  repeated string read = 1;
  repeated string write = 2;
  repeated string delete = 3;
}

message PathAccessRules {
  map<string, AccessRules> access_rules = 5;
}

message Header {
  string id = 1;
  string created_by = 2;
  int64 created_at = 3;
  int64 size = 4;
}

message Auth {
  string uid = 1;
  string email = 2;
  bool worker = 3;
  bool validated = 4;
  repeated string scope = 5;
  string group = 6;
}